Support multiple external IDs with the same system (#206)
* Allow either representation to be used as input to update API

* Add migration for new unique key.
