# server/src/middleware.ts
@@ -3,6 +3,7 @@ import { getApiKeys } from "./config";
 
 export interface AppRequest extends Request {
   authorization?: string;
+  versioned: VersionedMethods;
 }
 
 const API_KEYS = getApiKeys();
@@ -18,4 +19,29 @@ export function authorizeRequest(
     req.authorization = key;
   }
   return next();
+}
+
+class VersionedMethods {
+  req: AppRequest;
+
+  constructor(req: AppRequest) {
+    this.req = req;
+  }
+
+  formatLocation(location: any): any {
+    // mutates and returns a location object, formatted according to URL params
+    if (this.req.query.external_id_format !== "v2") {
+      location.external_ids = Object.fromEntries(location.external_ids);
+    }
+    return location;
+  }
+}
+
+export function versionedMiddleware(
+  req: AppRequest,
+  res: Response,
+  next: NextFunction
+) {
+  req.versioned = new VersionedMethods(req);
+  next();
 }
